# myfiles

./: .git_push.sh  .git_push_impl.sh  .gitignore  .gitmodules  Android.java  Android.mk  Android音视频.txt  C++.txt  C++语法.txt  DEADJOE  Linux_C函数库参考手册.cpp  Parcel.h  android面试问题.txt  build.gradle  c_or_c_plus_plus_function.cpp  ffmpeg.txt  ffmpeg_code_backup.cpp  git.txt  git_push.sh  github-recovery-codes.txt  jni.txt  main.cpp  mylife.cpp  recycleview.txt  sec_touchkey.kl  shell.sh  smartgit.lic  ubuntu_install.sh  vim.txt  windows.bat  work.txt  王力伟android工程师简历.doc  电脑上配置后分享文件，其他设备通过dlna方式读取文件  网址.txt  面试题.md  音视频技术.txt
android/alexander/: Android.mk  CMakeLists.txt  main.cpp
android/alexander/include/: LogDebug.h  MyConst.h
android/alexander/src/cpp/: main.cpp
android/alexander/src/include/: MyHead.h
c_plus_plus/clion/MyStudy/: CMakeLists.txt  MyHead.h  Test.cpp  Test.h  TestLibJpegTurbo2.cpp  ffmpeg.cpp  main.cpp  make  make.sh  run_me
c_plus_plus/clion/MyStudy/include/: GuessNumber.h  MyHead.h  Test.h  epoll.h
c_plus_plus/clion/MyStudy/src/: B0.cpp  GuessNumber.cpp  Method.cpp  MyHead2.h  Pointer.cpp  Study.cpp  StudyFFmpeg.cpp  Test.cpp  TestLibJpegTurbo.cpp  epoll.cpp  ffmpeg_sample.cpp  function_study.cpp  leixiaohua1020.cpp  music_player.cpp  music_player2.cpp  player.cpp  simplest_ffmpeg_player.cpp  yuv_player.cpp
c_plus_plus_project/MyStudy/: CMakeLists.txt  HandleAndroidString.cpp  HandleAndroidString.h  main.cpp  make.sh  merge_string.sh  run_me
c_plus_plus_project/MyStudy/include/: DownloadFile.hpp  FormatCode.hpp  HandleAndroidString.h  Method.h  MyHead.h  Test.h  TestClass.hpp  TestMemory.hpp  TestRegularExpression.hpp  TestSTL.hpp  TestString.hpp  TestThread.hpp  leak_detector_c.hpp  thread_pool_active.hpp
c_plus_plus_project/MyStudy/src/: B0.cpp  GuessNumber.cpp  HandleAndroidString.cpp  Method.cpp  Pointer.cpp  Study.cpp  Test.cpp  function_study.cpp  platform.h  thread_pool_active.c  thread_pool_simple.c
c_plus_plus_project/ffmpeg_study/: CMakeLists.txt  CMakeLists.txt_macos  ffmpeg.cpp  main.cpp
c_plus_plus_project/ffmpeg_study/include/: MyHead.h  decode_audio.h
c_plus_plus_project/ffmpeg_study/src/: StudyAgain.cpp  StudyFFmpeg.cpp  decode_audio.cpp  ffmpeg_sample.cpp  leixiaohua1020.cpp  music_player.cpp  music_player2.cpp  player.cpp
c_plus_plus_project/ffmpeg_study/src/business/alexander/: MediaPlayer.cpp  MediaPlayer.h  MediaWrapper.hpp  ffmpeg.cpp  ffmpeg.h
c_plus_plus_project/ffmpeg_study/src/business/ffplay/: FFplayer.cpp  FFplayer.h  cmdutils.c  cmdutils.h  config.h  ffplay.c  ffplay.h  ffplay_audio.c  ffplay_media.c
c_plus_plus_project/gnu-coreutils-8.30/: CMakeLists.txt
c_plus_plus_project/mytest/: CMakeLists.txt  main.cpp
c_plus_plus_project/mytest/src/: http.hpp  my_define.h  my_head.h  my_struct.h  utils.hpp
c_plus_plus_project/tcp_ip_client/: CMakeLists.txt  LinuxSocket.cpp  LinuxSocket.h  Makefile  TransferFile.cpp  TransferFile.h  makefile.sh
c_plus_plus_project/wget-1.19.5/: CMakeLists.txt  ChangeLog  Makefile  Makefile.in  aclocal.m4  config.status  configure
c_plus_plus_project/wget-1.19.5/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
c_plus_plus_project/wget-1.19.5/build-aux/: ltmain.sh
c_plus_plus_project/wget-1.19.5/doc/: Makefile  Makefile.in  wget.1  wget.pod
c_plus_plus_project/wget-1.19.5/fuzz/: Makefile  Makefile.in  wget_netrc_fuzzer.c  wget_options_fuzzer.dict
c_plus_plus_project/wget-1.19.5/lib/: Makefile  Makefile.am  Makefile.in  configmake.h  langinfo.h  locale.h  quotearg.c  signal.h  spawn.h  stdio.h  stdlib.h  string.h  strings.h  time.h  unistd.h  wctype.h
c_plus_plus_project/wget-1.19.5/lib/.deps/: asnprintf.Po  base32.Po  basename-lgpl.Po  basename.Po  binary-io.Po  c-ctype.Po  c-strcasecmp.Po  c-strcasestr.Po  c-strncasecmp.Po  cloexec.Po  dirname-lgpl.Po  dirname.Po  dup-safer-flag.Po  dup-safer.Po  exitfail.Po  fatal-signal.Po  fcntl.Po  fd-hook.Po  fd-safer-flag.Po  fd-safer.Po  getpass.Po  getprogname.Po  gettime.Po  hard-locale.Po  ioctl.Po  localcharset.Po  localtime-buffer.Po  malloca.Po  mbchar.Po  mbiter.Po  mbrtowc.Po  md2.Po  md4.Po  md5.Po  mktime.Po  nanosleep.Po  pipe-safer.Po  pipe2-safer.Po  pipe2.Po  printf-args.Po  (+27 more)
c_plus_plus_project/wget-1.19.5/lib/arpa/: inet.h
c_plus_plus_project/wget-1.19.5/lib/glthread/.deps/: lock.Po  threadlib.Po
c_plus_plus_project/wget-1.19.5/lib/sys/: file.h  select.h  socket.h  stat.h  wait.h
c_plus_plus_project/wget-1.19.5/lib/unicase/: caseprop.h  special-casing.h
c_plus_plus_project/wget-1.19.5/lib/unicase/.deps/: cased.Po  empty-prefix-context.Po  empty-suffix-context.Po  ignorable.Po  special-casing.Po  tolower.Po  u8-casemap.Po  u8-tolower.Po
c_plus_plus_project/wget-1.19.5/lib/unictype/.deps/: combiningclass.Po  pr_soft_dotted.Po
c_plus_plus_project/wget-1.19.5/lib/uninorm/.deps/: decompose-internal.Po  u8-normalize.Po
c_plus_plus_project/wget-1.19.5/m4/: gnulib-comp.m4  lib-link.m4
c_plus_plus_project/wget-1.19.5/po/: Makefile  Makefile.in
c_plus_plus_project/wget-1.19.5/src/: Makefile  Makefile.in  config.h  connect.c  convert.c  cookies.c  css-url.c  ftp-basic.c  ftp.c  gnutls.c  host.c  hsts.c  html-url.c  http.c  init.c  iri.c  log.c  log.h  main.c  metalink.c  mswindows.c  netrc.c  openssl.c  options.h  progress.c  ptimer.c  recur.c  res.c  retr.c  url.c  url.h  utils.c  version.c  warc.c  wget  wget.h
c_plus_plus_project/wget-1.19.5/src/.deps/: build_info.Po  connect.Po  convert.Po  cookies.Po  css-url.Po  css_.Po  exits.Po  ftp-basic.Po  ftp-ls.Po  ftp-opie.Po  ftp.Po  gnutls.Po  hash.Po  host.Po  hsts.Po  html-parse.Po  html-url.Po  http-ntlm.Po  http.Po  init.Po  log.Po  main.Po  netrc.Po  progress.Po  ptimer.Po  recur.Po  res.Po  retr.Po  spider.Po  url.Po  utils.Po  warc.Po  xattr.Po
c_plus_plus_project/wget-1.19.5/testenv/: Makefile  Makefile.in
c_plus_plus_project/wget-1.19.5/tests/: Makefile  Makefile.in
c_plus_plus_project/wget-1.19.5/tests/certs/: interca.conf  rootca.conf
c_plus_plus_project/wget-1.19.5/util/: Makefile  Makefile.in
shell/: tr.txt  (+7 more)
(+301 files in other folders)
